<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="PRG_VLS_Turbo" Id="{7c9d2b33-fe82-48b8-b6ac-01caf7032917}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_VLS_Turbo
VAR

	VLS_PTM_01_xExtIlkOK : BOOL; 
	fbVLS_PTM_01_ILK : FB_ChemRIXS_Turbo_ILK;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[

//Pfeiffer Turbo

(*Assign adresses to the pfeiffer controllers connected to this serial terminal*)
st_VLS_Pfeiffer_CTRL[1].iSerialAddress :=1;
st_VLS_Pfeiffer_CTRL[1].xEnableComm := TRUE;
	
(* Instanitate the Function block for serial communication with Pfeiffer*)	
fb_VLS_PfeifferCom(astPfeifferControl := st_VLS_Pfeiffer_CTRL,
			   astPfeifferStatus:= st_VLS_Pfeiffer_RBK,
				SerialRXBuffer:= VLS_EP1_CH1_SerialRXBuffer,
				SerialTXBuffer:= VLS_EP1_CH1_SerialTXBuffer);
				

(* Copy Status Pv's into the PTM structure*)
VLS_PTM_01.M_Serial_IO(st_Pfeiffer_CTRL:=st_VLS_Pfeiffer_CTRL[1],st_Pfeiffer_RBK:=st_VLS_Pfeiffer_RBK[1]);

(*
Turbo pump permit to run when:
Scroll pump is running
Turbo pump inlet pressure and backing line pressure are below than configured setpoints
Roughing valve is open.  When roughing valve closed, start a delay timer to stop turbo after a configured time interval.
*)

VLS_PTM_01_xExtIlkOK := F_TurboExtILK_TOF(Turbo:=VLS_PTM_01.iq_stPTM, BackingGauge:=CRIX_GPI_05.PG,
                            InletGauge:=VLS_GPI_01.PG, ScrollPump:= stCRIX_MECH_PRO_01, RoughingValve:=CRIX_VGC_05.iq_stValve, tDelay:=T#200S );
		  
VLS_PTM_01(i_xExtILKOk:=VLS_PTM_01_xExtIlkOK, iq_stPtm=> );

]]></ST>
    </Implementation>
    <LineIds Name="PRG_VLS_Turbo">
      <LineId Id="6" Count="1" />
      <LineId Id="11" Count="3" />
      <LineId Id="17" Count="9" />
      <LineId Id="28" Count="0" />
      <LineId Id="109" Count="1" />
      <LineId Id="116" Count="0" />
      <LineId Id="112" Count="2" />
      <LineId Id="89" Count="0" />
      <LineId Id="120" Count="0" />
      <LineId Id="119" Count="0" />
      <LineId Id="122" Count="0" />
      <LineId Id="118" Count="0" />
      <LineId Id="97" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="100" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>